--- a/04. Sequences-Time-Series-and-Prediction.ipynb
+++ b/04. Sequences-Time-Series-and-Prediction.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 06. Training a Deep Neural Network with Time Series Data\n",
     "# 07. Predicting time series with DNN\n",
     "\n",
-    "# 09. Using a multi-layer LSTM for forecasting\n",
-    "# 10. Using RNNsRNN's and LSTM's to predict time series\n",
-    "# 11. LSTMs\n",
-    "# 12. Predicting Sunspots with DNN\n",
-    "# 13. Predicting Sunspots with RNN and CNN"
+    "\n",
+    "# 10. Using RNNs and LSTM's to predict time series\n",
+    "# 11. LSTMs"
    ]
   }
  ],
